fix(pushtobackend): update anns with annid but deleted
