# paddlelabel/openapi.yml
@@ -760,6 +760,12 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Annotation'
       requestBody:
         content:
           application/json:
